--- a/ios/TaskManagement/Info.plist
+++ b/ios/TaskManagement/Info.plist
@@ -48,5 +48,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+    	<string>MaterialCommunityIcons.ttf</string>
+    	<string>FontAwesome.ttf</string>
+	</array>
 </dict>
 </plist>
